# bean-review

./: .gitignore  CLAUDE.md  PROJECT_SPEC.md  README.md  beancount-reviewer.py  keymap.py  models.py  pyproject.toml  requirements.txt  test.beancount
docs/: scopes.md
docs/adr/: 2025-02-20-read-from-file.md  2026-02-20-beangulp-import-hook.md  2026-02-21-footer-dialogs.md  2026-02-22-write-to-ledger-file.md  2026-03-13-no-auto-ai.md  2026-03-28-inbox-importer-execution.md  2026-03-28-inbox-screen.md  2026-03-31-inbox-archive-command.md  2026-03-31-remove-bulk-actions.md  2026-03-31-vc-tool-keybinding.md  2026-03-31-version-control-tool.md
screens/: transaction_list_screen.py
src/bean_review/: __main__.py  ai_client.py  beancount-reviewer.py  config.py  keymap.py  models.py  util.py
src/bean_review/screens/: __init__.py  inbox_screen.py  transaction_list_screen.py
src/bean_review/widgets/: __init__.py  confirm_footer.py  edit_text_footer.py  footer.py  fuzzy_select_footer.py  help_footer.py  keybinding_hints.py  message_footer.py
tests/: test_confirm_footer.py  test_inbox_screen.py  test_transaction_list_screen.py  test_util.py
widgets/: __init__.py  confirm_footer.py  edit_text_footer.py  footer.py  fuzzy_select_footer.py  help_footer.py
