[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bean-review"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beancount",
    "beangulp",
    "textual",
    "httpx",
]

[project.scripts]
bean-review = "bean_review.__main__:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
